<resources>
    <string name="app_name">navigation</string>
    <string name="Books">Books</string>
    <string name="wanttoread">want to read</string>
    <string name="Reviews">Reviews</string>
    <string name="Favorite">Favorite</string>
    <string name="Search">Search</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="my_name">Menna Ossama</string>
    <string name="Notification_clicked">Notification Clicked</string>
    <string name="reviews_clicked">Reviews Clicked</string>
    <string name="favorite_clicked">Favorite Clicked</string>
    <string name="search_clicked">Search Clicked</string>
    <string name="profile_clicked">Profile Clicked</string>
    <string name="settings_clicked">Settings Clicked</string>
</resources>