<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group android:id="@+id/group1">

    <item android:id="@+id/reviews"
        android:title="@string/Reviews"
        android:icon="@drawable/reviews"
        >
    </item>
    <item android:id="@+id/favorite"
        android:title="@string/Favorite"
        android:icon="@drawable/bookmark"
       >
    </item>
    <item android:id="@+id/search"
        android:title="@string/Search"
        android:icon="@drawable/search"
       >
    </item>
</group>

    <group android:id="@+id/group2">
        <item android:id="@+id/profile"
            android:title="@string/profile"
            android:icon="@drawable/user"
           >
        </item>
        <item android:id="@+id/settings"
            android:title="@string/settings"
            android:icon="@drawable/settings">
        </item>

    </group>
</menu>